--- a/src/bugs.tex
+++ b/src/bugs.tex
@@ -2,7 +2,7 @@
 \label{sec:bugs}
 \lstset{style=6502Style}
 
-\subsection{The Byte that Broke}
+\section{The Byte that Broke}
 \begin{q}{Jeff Minter's Newsletter 'The Nature of the Beast' August 1986\cite{planner}}
 We must apologise to some of the earliest purchasers of IA, as well... it
 seems that some data was corrupted during the production phase of the
@@ -60,7 +60,7 @@ $C002 08          PHP
 $C003	8D F8 BF	  STA $BFF8
 \end{lstlisting}
 
-\subsection{Reappearing Enemies}
+\section{Reappearing Enemies}
 
 When you start a new game, enemies from the previous game show up in the first
 wave. For most people starting out, this will take the form of a few residual
@@ -99,7 +99,7 @@ InitializeActiveShipLoop
   RTS 
 \end{lstlisting}
 
-\subsection{A Sort of Cheat}
+\section{A Sort of Cheat}
 
 After a minute or two in the title screen, the game enters 'Attract Mode' and
 plays a random level on autopilot for a few seconds. If you press F1 during
