--- a/src/bumph.tex
+++ b/src/bumph.tex
@@ -1,6 +1,6 @@
 \chapter{Bumph}
 
-\subsection{Cover}
+\section{Cover}
 \begin{figure}[H]
   {
     \begin{adjustbox}{width=10cm,center}
@@ -17,7 +17,7 @@
   }\caption[]{Back Cover}
 \end{figure}
 
-\subsection{Manual}
+\section{Manual}
 
 \begin{figure}[H]
   {
