--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -333,7 +333,7 @@ This book is an engineering love letter to the system that enabled Capcom to evo
 
 The goal of this work is to understand the CP-System, from the ground up. This will (hopefully) be achieved by first exposing the hardware and then progressively moving up, all the way to the programming and game engine architecture level.
 
-\subsubsection{Hardware}
+\subsection{Hardware}
 The CP-System is comprised of four hardware subsystems which are explored in the first chapter.
 \begin{itemize}[topsep=0pt]
 \item Control System
@@ -344,7 +344,7 @@ The CP-System is comprised of four hardware subsystems which are explored in the
  Beyond the hard reality of silicon and bus lines, a discussion of the design choices and real-life examples of how games leveraged features is provided when relevant.
 
 
-\subsubsection{Software}
+\subsection{Software}
 The subsequent chapters study the software and how to build it. In particular the four ROM groups that make up a game are explained. 
 
 \begin{itemize}[topsep=0pt]
@@ -356,5 +356,5 @@ The subsequent chapters study the software and how to build it. In particular th
 
 These chapters use modern tooling but also feature a "Back in the days" section which explores how Capcom used to work back in the '90s.
 
-\subsubsection{Peopleware}
+\subsection{Peopleware}
 People involved with either hardware or software are quoted in the relevant sections. However, Capcom was already a big company by the early '90s and many ended up participating in the history of the CPS-1. To help the reader keep track of all the actors, a list of people and their roles is available on page \pageref{people}.
