--- a/src/level_data/level_data_appendix.tex
+++ b/src/level_data/level_data_appendix.tex
@@ -1,6 +1,6 @@
 
 \clearpage
-\subsubsection{Sheep Planet - Level 1 Data}
+\subsection{Sheep Planet - Level 1 Data}
 
 \begin{figure}[H]
     \centering
@@ -62,7 +62,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 2 Data}
+\subsection{Sheep Planet - Level 2 Data}
 
 \begin{figure}[H]
     \centering
@@ -124,7 +124,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 3 Data}
+\subsection{Sheep Planet - Level 3 Data}
 
 \begin{figure}[H]
     \centering
@@ -186,7 +186,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 4 Data}
+\subsection{Sheep Planet - Level 4 Data}
 
 \begin{figure}[H]
     \centering
@@ -248,7 +248,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 5 Data}
+\subsection{Sheep Planet - Level 5 Data}
 
 \begin{figure}[H]
     \centering
@@ -310,7 +310,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 6 Data}
+\subsection{Sheep Planet - Level 6 Data}
 
 \begin{figure}[H]
     \centering
@@ -372,7 +372,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 7 Data}
+\subsection{Sheep Planet - Level 7 Data}
 
 \begin{figure}[H]
   {
@@ -424,7 +424,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 8 Data}
+\subsection{Sheep Planet - Level 8 Data}
 
 \begin{figure}[H]
     \centering
@@ -486,7 +486,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 9 Data}
+\subsection{Sheep Planet - Level 9 Data}
 
 \begin{figure}[H]
     \centering
@@ -548,7 +548,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 10 Data}
+\subsection{Sheep Planet - Level 10 Data}
 
 \begin{figure}[H]
     \centering
@@ -610,7 +610,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 11 Data}
+\subsection{Sheep Planet - Level 11 Data}
 
 \begin{figure}[H]
     \centering
@@ -672,7 +672,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 12 Data}
+\subsection{Sheep Planet - Level 12 Data}
 
 \begin{figure}[H]
     \centering
@@ -734,7 +734,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 13 Data}
+\subsection{Sheep Planet - Level 13 Data}
 
 \begin{figure}[H]
     \centering
@@ -796,7 +796,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 14 Data}
+\subsection{Sheep Planet - Level 14 Data}
 
 \begin{figure}[H]
     \centering
@@ -858,7 +858,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 15 Data}
+\subsection{Sheep Planet - Level 15 Data}
 
 \begin{figure}[H]
     \centering
@@ -920,7 +920,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 16 Data}
+\subsection{Sheep Planet - Level 16 Data}
 
 \begin{figure}[H]
     \centering
@@ -982,7 +982,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 17 Data}
+\subsection{Sheep Planet - Level 17 Data}
 
 \begin{figure}[H]
     \centering
@@ -1044,7 +1044,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 18 Data}
+\subsection{Sheep Planet - Level 18 Data}
 
 \begin{figure}[H]
     \centering
@@ -1106,7 +1106,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 19 Data}
+\subsection{Sheep Planet - Level 19 Data}
 
 \begin{figure}[H]
   {
@@ -1158,7 +1158,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Sheep Planet - Level 20 Data}
+\subsection{Sheep Planet - Level 20 Data}
 
 \begin{figure}[H]
     \centering
@@ -1220,7 +1220,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 1 Data}
+\subsection{Tech Planet - Level 1 Data}
 
 \begin{figure}[H]
   {
@@ -1272,7 +1272,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 2 Data}
+\subsection{Tech Planet - Level 2 Data}
 
 \begin{figure}[H]
     \centering
@@ -1334,7 +1334,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 3 Data}
+\subsection{Tech Planet - Level 3 Data}
 
 \begin{figure}[H]
     \centering
@@ -1396,7 +1396,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 4 Data}
+\subsection{Tech Planet - Level 4 Data}
 
 \begin{figure}[H]
     \centering
@@ -1458,7 +1458,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 5 Data}
+\subsection{Tech Planet - Level 5 Data}
 
 \begin{figure}[H]
     \centering
@@ -1520,7 +1520,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 6 Data}
+\subsection{Tech Planet - Level 6 Data}
 
 \begin{figure}[H]
     \centering
@@ -1582,7 +1582,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 7 Data}
+\subsection{Tech Planet - Level 7 Data}
 
 \begin{figure}[H]
     \centering
@@ -1644,7 +1644,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 8 Data}
+\subsection{Tech Planet - Level 8 Data}
 
 \begin{figure}[H]
     \centering
@@ -1706,7 +1706,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 9 Data}
+\subsection{Tech Planet - Level 9 Data}
 
 \begin{figure}[H]
     \centering
@@ -1768,7 +1768,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 10 Data}
+\subsection{Tech Planet - Level 10 Data}
 
 \begin{figure}[H]
     \centering
@@ -1830,7 +1830,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 11 Data}
+\subsection{Tech Planet - Level 11 Data}
 
 \begin{figure}[H]
     \centering
@@ -1892,7 +1892,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 12 Data}
+\subsection{Tech Planet - Level 12 Data}
 
 \begin{figure}[H]
     \centering
@@ -1954,7 +1954,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 13 Data}
+\subsection{Tech Planet - Level 13 Data}
 
 \begin{figure}[H]
     \centering
@@ -2016,7 +2016,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 14 Data}
+\subsection{Tech Planet - Level 14 Data}
 
 \begin{figure}[H]
     \centering
@@ -2078,7 +2078,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 15 Data}
+\subsection{Tech Planet - Level 15 Data}
 
 \begin{figure}[H]
   {
@@ -2130,7 +2130,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 16 Data}
+\subsection{Tech Planet - Level 16 Data}
 
 \begin{figure}[H]
     \centering
@@ -2192,7 +2192,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 17 Data}
+\subsection{Tech Planet - Level 17 Data}
 
 \begin{figure}[H]
     \centering
@@ -2254,7 +2254,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 18 Data}
+\subsection{Tech Planet - Level 18 Data}
 
 \begin{figure}[H]
     \centering
@@ -2316,7 +2316,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 19 Data}
+\subsection{Tech Planet - Level 19 Data}
 
 \begin{figure}[H]
     \centering
@@ -2378,7 +2378,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Tech Planet - Level 20 Data}
+\subsection{Tech Planet - Level 20 Data}
 
 \begin{figure}[H]
     \centering
@@ -2440,7 +2440,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 1 Data}
+\subsection{Brick Planet - Level 1 Data}
 
 \begin{figure}[H]
   {
@@ -2492,7 +2492,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 2 Data}
+\subsection{Brick Planet - Level 2 Data}
 
 \begin{figure}[H]
     \centering
@@ -2554,7 +2554,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 3 Data}
+\subsection{Brick Planet - Level 3 Data}
 
 \begin{figure}[H]
     \centering
@@ -2616,7 +2616,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 4 Data}
+\subsection{Brick Planet - Level 4 Data}
 
 \begin{figure}[H]
     \centering
@@ -2678,7 +2678,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 5 Data}
+\subsection{Brick Planet - Level 5 Data}
 
 \begin{figure}[H]
     \centering
@@ -2740,7 +2740,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 6 Data}
+\subsection{Brick Planet - Level 6 Data}
 
 \begin{figure}[H]
     \centering
@@ -2802,7 +2802,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 7 Data}
+\subsection{Brick Planet - Level 7 Data}
 
 \begin{figure}[H]
     \centering
@@ -2864,7 +2864,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 8 Data}
+\subsection{Brick Planet - Level 8 Data}
 
 \begin{figure}[H]
   {
@@ -2916,7 +2916,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 9 Data}
+\subsection{Brick Planet - Level 9 Data}
 
 \begin{figure}[H]
     \centering
@@ -2978,7 +2978,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 10 Data}
+\subsection{Brick Planet - Level 10 Data}
 
 \begin{figure}[H]
     \centering
@@ -3040,7 +3040,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 11 Data}
+\subsection{Brick Planet - Level 11 Data}
 
 \begin{figure}[H]
     \centering
@@ -3102,7 +3102,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 12 Data}
+\subsection{Brick Planet - Level 12 Data}
 
 \begin{figure}[H]
     \centering
@@ -3164,7 +3164,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 13 Data}
+\subsection{Brick Planet - Level 13 Data}
 
 \begin{figure}[H]
     \centering
@@ -3226,7 +3226,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 14 Data}
+\subsection{Brick Planet - Level 14 Data}
 
 \begin{figure}[H]
     \centering
@@ -3288,7 +3288,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 15 Data}
+\subsection{Brick Planet - Level 15 Data}
 
 \begin{figure}[H]
     \centering
@@ -3350,7 +3350,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 16 Data}
+\subsection{Brick Planet - Level 16 Data}
 
 \begin{figure}[H]
     \centering
@@ -3412,7 +3412,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 17 Data}
+\subsection{Brick Planet - Level 17 Data}
 
 \begin{figure}[H]
     \centering
@@ -3474,7 +3474,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 18 Data}
+\subsection{Brick Planet - Level 18 Data}
 
 \begin{figure}[H]
     \centering
@@ -3536,7 +3536,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 19 Data}
+\subsection{Brick Planet - Level 19 Data}
 
 \begin{figure}[H]
     \centering
@@ -3598,7 +3598,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Brick Planet - Level 20 Data}
+\subsection{Brick Planet - Level 20 Data}
 
 \begin{figure}[H]
     \centering
@@ -3660,7 +3660,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 1 Data}
+\subsection{Mushroom Planet - Level 1 Data}
 
 \begin{figure}[H]
     \centering
@@ -3722,7 +3722,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 2 Data}
+\subsection{Mushroom Planet - Level 2 Data}
 
 \begin{figure}[H]
     \centering
@@ -3784,7 +3784,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 3 Data}
+\subsection{Mushroom Planet - Level 3 Data}
 
 \begin{figure}[H]
     \centering
@@ -3846,7 +3846,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 4 Data}
+\subsection{Mushroom Planet - Level 4 Data}
 
 \begin{figure}[H]
     \centering
@@ -3908,7 +3908,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 5 Data}
+\subsection{Mushroom Planet - Level 5 Data}
 
 \begin{figure}[H]
     \centering
@@ -3970,7 +3970,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 6 Data}
+\subsection{Mushroom Planet - Level 6 Data}
 
 \begin{figure}[H]
     \centering
@@ -4032,7 +4032,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 7 Data}
+\subsection{Mushroom Planet - Level 7 Data}
 
 \begin{figure}[H]
     \centering
@@ -4094,7 +4094,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 8 Data}
+\subsection{Mushroom Planet - Level 8 Data}
 
 \begin{figure}[H]
     \centering
@@ -4156,7 +4156,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 9 Data}
+\subsection{Mushroom Planet - Level 9 Data}
 
 \begin{figure}[H]
     \centering
@@ -4218,7 +4218,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 10 Data}
+\subsection{Mushroom Planet - Level 10 Data}
 
 \begin{figure}[H]
     \centering
@@ -4280,7 +4280,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 11 Data}
+\subsection{Mushroom Planet - Level 11 Data}
 
 \begin{figure}[H]
     \centering
@@ -4342,7 +4342,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 12 Data}
+\subsection{Mushroom Planet - Level 12 Data}
 
 \begin{figure}[H]
     \centering
@@ -4404,7 +4404,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 13 Data}
+\subsection{Mushroom Planet - Level 13 Data}
 
 \begin{figure}[H]
     \centering
@@ -4466,7 +4466,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 14 Data}
+\subsection{Mushroom Planet - Level 14 Data}
 
 \begin{figure}[H]
     \centering
@@ -4528,7 +4528,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 15 Data}
+\subsection{Mushroom Planet - Level 15 Data}
 
 \begin{figure}[H]
     \centering
@@ -4590,7 +4590,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 16 Data}
+\subsection{Mushroom Planet - Level 16 Data}
 
 \begin{figure}[H]
     \centering
@@ -4652,7 +4652,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 17 Data}
+\subsection{Mushroom Planet - Level 17 Data}
 
 \begin{figure}[H]
     \centering
@@ -4714,7 +4714,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 18 Data}
+\subsection{Mushroom Planet - Level 18 Data}
 
 \begin{figure}[H]
     \centering
@@ -4776,7 +4776,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 19 Data}
+\subsection{Mushroom Planet - Level 19 Data}
 
 \begin{figure}[H]
     \centering
@@ -4838,7 +4838,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Mushroom Planet - Level 20 Data}
+\subsection{Mushroom Planet - Level 20 Data}
 
 \begin{figure}[H]
     \centering
@@ -4900,7 +4900,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 1 Data}
+\subsection{Om Planet - Level 1 Data}
 
 \begin{figure}[H]
     \centering
@@ -4962,7 +4962,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 2 Data}
+\subsection{Om Planet - Level 2 Data}
 
 \begin{figure}[H]
     \centering
@@ -5024,7 +5024,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 3 Data}
+\subsection{Om Planet - Level 3 Data}
 
 \begin{figure}[H]
   {
@@ -5076,7 +5076,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 4 Data}
+\subsection{Om Planet - Level 4 Data}
 
 \begin{figure}[H]
   {
@@ -5128,7 +5128,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 5 Data}
+\subsection{Om Planet - Level 5 Data}
 
 \begin{figure}[H]
     \centering
@@ -5190,7 +5190,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 6 Data}
+\subsection{Om Planet - Level 6 Data}
 
 \begin{figure}[H]
     \centering
@@ -5252,7 +5252,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 7 Data}
+\subsection{Om Planet - Level 7 Data}
 
 \begin{figure}[H]
     \centering
@@ -5314,7 +5314,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 8 Data}
+\subsection{Om Planet - Level 8 Data}
 
 \begin{figure}[H]
     \centering
@@ -5376,7 +5376,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 9 Data}
+\subsection{Om Planet - Level 9 Data}
 
 \begin{figure}[H]
     \centering
@@ -5438,7 +5438,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 10 Data}
+\subsection{Om Planet - Level 10 Data}
 
 \begin{figure}[H]
     \centering
@@ -5500,7 +5500,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 11 Data}
+\subsection{Om Planet - Level 11 Data}
 
 \begin{figure}[H]
     \centering
@@ -5562,7 +5562,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 12 Data}
+\subsection{Om Planet - Level 12 Data}
 
 \begin{figure}[H]
     \centering
@@ -5624,7 +5624,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 13 Data}
+\subsection{Om Planet - Level 13 Data}
 
 \begin{figure}[H]
     \centering
@@ -5686,7 +5686,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 14 Data}
+\subsection{Om Planet - Level 14 Data}
 
 \begin{figure}[H]
     \centering
@@ -5748,7 +5748,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 15 Data}
+\subsection{Om Planet - Level 15 Data}
 
 \begin{figure}[H]
     \centering
@@ -5810,7 +5810,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 17 Data}
+\subsection{Om Planet - Level 17 Data}
 
 \begin{figure}[H]
     \centering
@@ -5872,7 +5872,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 18 Data}
+\subsection{Om Planet - Level 18 Data}
 
 \begin{figure}[H]
   {
@@ -5924,7 +5924,7 @@
 \end{figure}
 
 \clearpage
-\subsubsection{Om Planet - Level 20 Data}
+\subsection{Om Planet - Level 20 Data}
 
 \begin{figure}[H]
     \centering
