--- a/src/level_data_appendix_detail.tex
+++ b/src/level_data_appendix_detail.tex
@@ -1,12 +1,12 @@
 \chapter{Appendix: Enemy Data}
-\subsubsection{Sprite Data for Each Level}
+\subsection{Sprite Data for Each Level}
 \subfile{level_data/level_data_sprites}
 
-\subsection{Enemy Pointer Data}
+\section{Enemy Pointer Data}
 \subfile{level_data/level_data_pointers}
 
-\subsection{Enemy Behaviour}
+\section{Enemy Behaviour}
 \subfile{level_data/level_data_behaviour}
 
-\subsection{Level Movement Data}
+\section{Level Movement Data}
 \subfile{level_data/level_data_movement}
