--- a/src/music.tex
+++ b/src/music.tex
@@ -129,7 +129,7 @@ ReturnFromTitleScreenMusic
         RTS
 \end{lstlisting}
 
-\subsection{Some Basics}
+\section{Some Basics}
 The rudiments of playing music on the Commodore 64 are simple. It has a powerful-for-its-time
 sound chip that has 3 tracks or 'voices'. You can play any note across 8 octaves on each of
 these voices together or separately. There are a whole bunch of settings you can apply
@@ -327,7 +327,7 @@ music in Western notation.
 }\caption[]{The first title tune in Iridis Alpha.}
 \end{figure}
 
-\subsubsection{Structure}
+\subsection{Structure}
 Even if you can't read sheet music notation some structure should be evident.
 
 Voice 3 carries the main melody. 
@@ -510,7 +510,7 @@ standard Western notation.
 
 \end{tcolorbox}%
 
-\subsubsection{Phrasing}
+\subsection{Phrasing}
 Now that we've identified the underlying 4-bar structure of the arrangement. We can take a closer look at the 
 phrasing of the invidividual parts. Voice 3 has a simple repetitive structure for each 4-bar phrase:
 
@@ -788,7 +788,7 @@ If we look at two other procedurally generated tunes we can see the same pattern
 }\caption[]{The same patterns in Tunes 12 and 18.}
 \end{figure}
 
-\subsubsection{Seeding the Random}
+\subsection{Seeding the Random}
 
 We've established how each tune is built entirely off the same 4-byte sequence, all the way from selecting
 notes to play to filling out the larger structure of the tune at almost every level. What remains is
