--- a/src/preface.tex
+++ b/src/preface.tex
@@ -39,7 +39,7 @@ As a final coda, \hyperref[sec:bugs]{\textcolor{blue}{Iridis Oops!}} takes a loo
 If you are reading the PDF version of this book the \hyperref[sec:appendices]{\textcolor{blue}{Appendices}} contain a data dump of sprite sheets, character sets, maps and tables that 
 should provide hours of rewarding bedtime reading.
 
-\subsection{Note on the Text}
+\section{Note on the Text}
 The version you are reading is little more than a scrapbook still many revisions away from a
 finished product. If you find the writing hard going or the attempts to explain things difficult
 to follow, by all means \href{https://github.com/mwenge/iatheory/issues}{\textcolor{blue}{leave me a note}} and
@@ -48,3 +48,13 @@ to the next pretty picture or promising-looking block of text.
 
 
 - Rob Hogan 2023 \href{https://mastodon.social/@mwenge}{\textcolor{blue}{@mwenge}}
+\clearpage
+\vspace*{\fill}
+\begin{figure}[H]
+    \centering
+      \includegraphics[width=5cm]{src/cover/title_page.png}%
+\end{figure}
+\vspace*{\fill}
+\thispagestyle{empty}%
+\clearpage
+
