--- a/src/torus.tex
+++ b/src/torus.tex
@@ -24,7 +24,7 @@ roots in this article.
 \end{figure}
 
 
-\subsection{Taurus:Torus}
+\section{Taurus:Torus}
 \begin{figure}[H]
 {
   \begin{adjustbox}{width=11cm,center}
@@ -83,7 +83,7 @@ Not all of the tunes are 64-note based. It does generate some that are truncated
 \end{figure}
 
 
-\subsection{Taurus/Torus Two}
+\section{Taurus/Torus Two}
 \begin{figure}[H]
 {
   \begin{adjustbox}{width=11cm,center}
