--- a/src/level_data.tex
+++ b/src/level_data.tex
@@ -99,7 +99,7 @@ the sheer variety of adversaries the player faces.
 \end{figure}
 \clearpage
 
-\subsection{Something Simple - Byte 0: The Enemy's Color}
+\section{Something Simple - Byte 0: The Enemy's Color}
 To get an understanding of how the level data is used we can start with the very first byte of the data
 used for the first wave in the very first level. This is the wave of flying saucers you will already be
 familiar with if you have played the game (:)):
@@ -179,7 +179,7 @@ GetWaveDataForNewShip
     STA upperPlanetAttackShipsColorArray + $01,X
 \end{lstlisting}
 
-\subsection{Bytes 1-4: Sprite Animation}
+\section{Bytes 1-4: Sprite Animation}
 \begin{q}{Jeff Minter's Development Diary in Zzap Magazine\cite{planner}}
 You pass the interpreter data, that describes exactly stuff like: what each
 alien looks like, how many frames of animation it uses, speed of that
@@ -355,7 +355,7 @@ UpperPlanetShipsLoop
     RTS
 \end{lstlisting}
 
-\subsection{Bytes 18-21: Enemy Movement}
+\section{Bytes 18-21: Enemy Movement}
 
 Enemy movement is controlled by two parameters in each direction: the number of pixels to move in one go and the number of
 cycles to wait between each movement. So for movement in the horizontal (or X direction) \icode{Byte 18} controls the number
@@ -490,7 +490,7 @@ The net result is a deceleration effect. This is observed in the way the licker 
 wave will accelerate out to the center before dialling back again.
 
 
-\subsubsection{What is going on with Byte 6?}
+\subsection{What is going on with Byte 6?}
 
 Byte 6 comes into play when setting the initial Y position of a new enemy. This initial vertical
 position is random, but subject to some adjustment:
@@ -604,7 +604,7 @@ This is definitely some forgotten code. Byte 6 is elsewhere used in combination 
 enemy mode for some levels where the ship will supplement any dead ships with alternate enemy types and attack patterns periodically.
 
 
-\subsection{Bytes 6-8: Alternate Enemy Waves}
+\section{Bytes 6-8: Alternate Enemy Waves}
 This happens in \icode{MaybeSwitchToAlternateEnemyPattern} in \icode{UpdateAttackShipDataForNewShip}. 
 
 \begin{lstlisting}[caption=Byte 6 is used to periodically switch to an enemy mode defined by Bytes 7-8 ]
@@ -809,7 +809,7 @@ are treated as providing the address \icode{\$1370}. This is the location where 
 \end{table}
 
 
-\subsection{Bytes 22-23: The Bytes of Death}
+\section{Bytes 22-23: The Bytes of Death}
 \begin{figure}[H]
   {
     \setlength{\tabcolsep}{3.0pt}
@@ -899,7 +899,7 @@ NoHorizontalMovementRequired
   TAX
 \end{lstlisting}
 
-\subsection{Byte 35: Energy Multiplier}
+\section{Byte 35: Energy Multiplier}
 When an enemy is struck this byte contains the multiplier applied to the player's energy boost:
 
 \begin{lstlisting}
@@ -1012,7 +1012,7 @@ NoMultiplierAppliedToCollision
 
 \end{lstlisting}
 
-\subsection{Byte 34: Score for Hitting the Enemy}
+\section{Byte 34: Score for Hitting the Enemy}
 This is used to augment the score received for hitting the enemy.
 \begin{lstlisting}
     ; Get the points for hitting enemies in this level
