--- a/src/programing.tex
+++ b/src/programing.tex
@@ -59,14 +59,14 @@ During the linking stage, all the variables and functions are given an address i
 \caption*{CPU Memory address space, ROM and RAM}
 \end{figure}
 
-\subsubsection{Read-only}
+\subsection{Read-only}
 Instructions for \icode{f} go in section \icode{.text} at offset 0. Since the linker knows both where the ROM will be mapped and the section offset in the ROM, it can inline calls to \icode{.text + 0}. This means \icode{0x0000} for both the z80 and the m68k.
 
 Const values \icode{c} and \icode{d} are read only so they go in ROM as well. These are grouped in section \icode{.rodata} apart from \icode{.text}. Access to these two symbols are respectively inlined with values \icode{.rodata + 0} and \icode{.rodata + 1}.
 
 
 
-\subsubsection{Read-Write}
+\subsection{Read-Write}
 Symbol \icode{a} is interesting because it is readable but also writable. The linker will have assigned a RAM address (starting at \icode{0xD000} on z80 and \icode{0xFF0000} on m68k). Since it is uninitialized, it will point to whatever is in the RAM when it started.
 
 Like \icode{a}, \icode{b} is readable and writable but it is initialized to value \icode{0}. The linker can make \icode{a} point to RAM and even group zero-initialized variables together in \icode{.bss} but setting the value to 0 cannot be done. This is something the bootstrap will have to resolve.
@@ -89,19 +89,19 @@ There are many chips in the machine that need to talk to each other. In the hier
 
 That is a total of eight communication lines, but the dotted ones in the drawing are not programmable, lowering the task to understanding five APIs.
 
-\subsection{m68k \begin{CJK}{UTF8}{min}→\end{CJK} CPSA and m68k \begin{CJK}{UTF8}{min}→\end{CJK} CPS-B} Communication occurs over the CPS-A and CPS-B registers. Additional draw commands are written by the 68000 to the GFXRAM where they are read by the CPS-A. All access to GFXRAM is arbitrated by the m68k bus protocol.
+\section{m68k \begin{CJK}{UTF8}{min}→\end{CJK} CPSA and m68k \begin{CJK}{UTF8}{min}→\end{CJK} CPS-B} Communication occurs over the CPS-A and CPS-B registers. Additional draw commands are written by the 68000 to the GFXRAM where they are read by the CPS-A. All access to GFXRAM is arbitrated by the m68k bus protocol.
 
-\subsection{z80 \begin{CJK}{UTF8}{min}→\end{CJK} YM2151} Communication occurs over the YM2151 registers which are mapped on the z80 bus. This access is arbitrated by the z80 bus protocol.
+\section{z80 \begin{CJK}{UTF8}{min}→\end{CJK} YM2151} Communication occurs over the YM2151 registers which are mapped on the z80 bus. This access is arbitrated by the z80 bus protocol.
 
-\subsection{z80 \begin{CJK}{UTF8}{min}→\end{CJK} MSM6295} Communication  occurs over the MSM6295 registers which are mapped on the z80 bus. This access is arbitrated by the z80 bus protocol. 
+\section{z80 \begin{CJK}{UTF8}{min}→\end{CJK} MSM6295} Communication  occurs over the MSM6295 registers which are mapped on the z80 bus. This access is arbitrated by the z80 bus protocol. 
 
-\subsection{m68k \begin{CJK}{UTF8}{min}→\end{CJK} z80} Communication between these two CPUs is not trivial. They both have their own bus protocol, run at different speeds, have different address spaces, and data widths.
+\section{m68k \begin{CJK}{UTF8}{min}→\end{CJK} z80} Communication between these two CPUs is not trivial. They both have their own bus protocol, run at different speeds, have different address spaces, and data widths.
 
 Try to think of a design yourself with the following constraints. There are two 1 byte latches. On one side is a m68k running at 10MHz which can write in them but not read. On the other end is a z80, working at 3.579 MHz which can read but not write them. 
 
 How can you make these two CPUs talk to each other reliably, making sure the stream of commands features no duplicates and no drops?
 
-\subsection{Interrupts}
+\section{Interrupts}
 \index{Interrupts!z80}
 \index{Interrupts!68000}
 Both the z80 and the m68k have interrupt systems. These are used to solve many problems and in particular the issue of communicating over the latches.
@@ -129,7 +129,7 @@ This introduces an ultimate problem. It is not possible for the m68k CPU to send
 
 
 
-\subsection{Back in the days}\index{Back in the days!General}
+\section{Back in the days}\index{Back in the days!General}
 The system and conventions we just described allows for reliable data exchange but it does not give a semantic to the values in the latches. 
 
 A developer is free to give any meaning to the latches since they control both the writer and the reader. Maybe you can even take a second to think how you would design this interface if you had to before we study how Capcom did it.
@@ -151,7 +151,7 @@ Notice how the encoder, on the m68k side, injects \icode{0xFF} no-op bytes after
 
 What about the other latch? Street Fighter II only ever uses the first one. The other one is left unused.
 
-\subsubsection{No sound driver can rule them all}
+\subsection{No sound driver can rule them all}
 
 Given the capabilities of the communication system described above, it would be fair to assume all Capcom games used it. That would be wrong.
 
@@ -164,7 +164,7 @@ The merits of a translation table may be explained by the size of Capcom team an
 If the sound team had to change the OKI layout, all IDS used by the m68k would be invalid. With a translation table, the sound team was able to make any change they wanted and keep their sound and music IDs backward compatible.
 
 
-\subsection{Our sound driver}
+\section{Our sound driver}
 
 The sound driver described in the next pages uses the same architecture as Capcom. It relies on interrupts on both sides. Besides being used for the latch communication, the interrupts also maintain a counter to pace the main threads.
 
