--- a/src/titlescreen.tex
+++ b/src/titlescreen.tex
@@ -69,7 +69,7 @@ so that we get to stop dozens of times in each single 16 millisecond traversal.
 Before we look at how we fit it all in, let's first appreciate just how much we plan to
 do each time the screen is painted.
 
-\subsection{Sprites}
+\section{Sprites}
 The C64 makes 8 sprites available to us. A sprite is a special purpose graphical object that
 can be up to 24 pixels wide by 20 pixels high. We can place them wherever we want on the
 screen. They are the core of graphics programming and Iridis Alpha has dozens of them. But
@@ -234,7 +234,7 @@ achieved very soon.
   }\caption{The sprite used for painting the starfield. Only a part of the sprite is ever painted!}
 \end{figure}
 
-\subsection{Waiting for the Beam}
+\section{Waiting for the Beam}
 With our 'Raster Interrupt' handler set up as \icode{TitleScreenInterruptHandler} we're ready to 
 react when the raster reaches line 16 on the screen. Since the screen is made up of 512 lines in
 total this will be along soon.
@@ -287,7 +287,7 @@ we're not yet writing it to the actual screen. This is just a place in memory th
 will refer to later when it is actually writing dots to the screen. If we write a stripe character to a particulas position
 in this \icode{SCREEN\_RAM} memory it will know to write it the corresponding position on the screen.
 
-\subsubsection{Drawing the Stripes}
+\subsection{Drawing the Stripes}
 So let's write some stripes to RAM!
 
 \begin{lstlisting}[caption=The 'stripe' character.]
@@ -386,7 +386,7 @@ in that position.
 
 \input{titlescreen/titlescreen_color_ram_stripes}
 
-\subsubsection{Drawing the Text}
+\subsection{Drawing the Text}
 
 Next up is to write out the title screen's text to \icode{SCREEN\_RAM}. This we do in \icode{DrawTitleScreenText}
 using a similar loop to \icode{DrawStripesBehindTitle}. 
@@ -463,7 +463,7 @@ unpick as follow the raster on its journey to the bottom of the screen in the ne
   grid helps compare with our previous figures for \icode{SCREEN\_RAM} and \icode{COLOR\_RAM}.}
 \end{figure}
 
-\subsection{Racing the Beam}
+\section{Racing the Beam}
 Now we're ready to receive our ifirst beam. You may remember we set this to happen when the raster reached line 16:
 
 \begin{lstlisting}[caption=In \icode{InitializeSpritesAndInterruptsForTitleScreen}]
@@ -622,7 +622,7 @@ wrinkle elsewhere too so it's worth pausing on for a moment.
 The next few lines of the routine do quite a bit of convoluted work to handle something called the \icode{spriteMSBXPosOffset} of the
 star. This is our complication. 
 
-\subsubsection{A Complication}
+\subsection{A Complication}
 \begin{lstlisting}[caption= MSBXPos.. some'it.]
         ; Set the rest of the X position of the star
         ; if it's greater than 255.
@@ -797,7 +797,7 @@ with the value we've stored in \icode{spriteMSBXPosOffset}. In this case it rema
   }\caption*{OR'ing \$73 and \$00 gives \$73.}
 \end{figure}
 
-\subsubsection{Back to the Beam}
+\subsection{Back to the Beam}
 Now that we've fixed the star's co-ordinates there's just two main things left to do before we're done with
 handling this raster interrupt. One is to set the color of the star. We do this using a look-up array
 where we get the color for the star per our current index and set it:
@@ -841,7 +841,7 @@ as it unfolds through each of these interrupts:
   the gilby sprites.}
 \end{figure}
 
-\subsection{Enter The Gilbies}
+\section{Enter The Gilbies}
 \begin{figure}[H]
     \centering
       \includegraphics[width=12cm]{titlescreen/title25.png}%
@@ -945,7 +945,7 @@ and as the raster progress our gilbies are revealed.
 \caption{Behold the gilbies.}
 \end{figure}
 
-\subsection{Title Text}
+\section{Title Text}
 \begin{figure}[H]
     \centering
       \includegraphics[width=12cm]{titlescreen/title57.png}%
